[tool.poetry]
name = "one-billion-row-challeng"
version = "0.1.0"
description = ""
authors = ["cassianodescovi <cassianodescovi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
flake8 = "^7.0.0"
black = "^24.3.0"
pre-commit = "^3.7.0"
tqdm = "^4.66.2"
pandas = "^2.2.1"
duckdb = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"